clusters/openshift/apps/utility/pairdrop/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pairdrop-route
  namespace: pairdrop
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: openshift-gateway
    namespace: openshift-ingress
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: openshift-gateway-internal
    namespace: openshift-ingress
  hostnames:
  - pairdrop.vanillax.xyz
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/"
    backendRefs:
    - group: ''
      kind: Service
      name: pairdrop
      port: 3000
      weight: 1
